--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <main class="flex flex-col gap-5 my-10 max-w-[500px] mx-auto">
       <div class="flex justify-between text-xl font-semibold">
         <h1 id="title" class="another-class">Flashcard app</h1>
-        <h1 id="score-card" class="text-md">Score = 10 </h1>
-        <h1 id="alerting" class="font-thin text-md">You got 0 wrong</h1>
+        <h1 id="score-card" class="text-md">Selected: 0 </h1>
       </div>
       <div id="card-container" class="space-y-3"></div>
       <div id="clicked" class="space-y-3"></div>
